Fix alignement and missing padding

--- a/assets/scss/components/_nav-mobile.scss
+++ b/assets/scss/components/_nav-mobile.scss
@@ -13,7 +13,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     background: $color-brand;
 
     ul {
@@ -28,8 +27,7 @@
   }
 
   .nav-mobile__header {
-    margin: 0 auto 90px;
-    width: calc(100% - 30px);
+    margin: 0 20px 90px;
     min-height: 60px;
     justify-content: space-between;
     display: flex;
